syntax = "proto3";

option java_multiple_files = true;
option java_package = "es.um.sisdist.backend.grpc";

package es.um.sisdist.backend.grpc;

service GrpcService
{
    rpc Ping(PingRequest) returns (PingResponse);
	rpc promptPOST(POSTRequest) returns (POSTResponse);
	rpc promptGET(GETRequest) returns (GETResponse);

}

message PingRequest
{
	int32 v = 1;
}

message PingResponse
{
	int32 v = 1;
}

message POSTRequest
{
	string prompt = 1;
}

message POSTResponse
{
	string localization = 1;
}

message GETRequest
{
	string answerURL = 1;
	string idConversation = 2;
}

message GETResponse
{
	string answerText =1;
}
